<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/leumi_header" >

        <ImageButton
            android:id="@+id/ib_go_home_profile_screen"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:visibility="gone" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/profile_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="40dp" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <ImageView
                    android:id="@+id/iv_profile_screen"
                    android:layout_width="75dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="15dp"
                        android:textColor="@color/main_name_blue_color"
                        android:textSize="22sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingRight="15dp" >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:gravity="right"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/tv_profile_tel_num"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="3dp"
                                android:layout_marginTop="3dp"
                                android:textColor="@android:color/black" />

                            <TextView
                                android:id="@+id/tv_profile_cell_num"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="3dp"
                                android:layout_marginTop="3dp"
                                android:textColor="@android:color/black" />

                            <TextView
                                android:id="@+id/tv_profile_fax"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="3dp"
                                android:layout_marginTop="3dp"
                                android:textColor="@android:color/black" />

                            <TextView
                                android:id="@+id/tv_profile_email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="3dp"
                                android:layout_marginTop="3dp"
                                android:textColor="@android:color/black" />

                            <TextView
                                android:id="@+id/tv_profile_unit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="3dp"
                                android:layout_marginTop="3dp"
                                android:textColor="@color/dodgerblue" />

                            <TextView
                                android:id="@+id/tv_profile_job"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="3dp"
                                android:layout_marginTop="3dp"
                                android:textColor="@android:color/black" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:orientation="vertical" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="3dp"
                                android:layout_marginTop="3dp"
                                android:text="@string/tel_num"
                                android:textColor="@android:color/black" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="3dp"
                                android:layout_marginTop="3dp"
                                android:text="@string/cell_num"
                                android:textColor="@android:color/black" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="3dp"
                                android:layout_marginTop="3dp"
                                android:text="@string/fax"
                                android:textColor="@android:color/black" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="3dp"
                                android:layout_marginTop="3dp"
                                android:text="@string/email"
                                android:textColor="@android:color/black" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="3dp"
                                android:layout_marginTop="3dp"
                                android:text="@string/unit"
                                android:textColor="@android:color/black" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="3dp"
                                android:layout_marginTop="3dp"
                                android:text="@string/job"
                                android:textColor="@android:color/black" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:orientation="horizontal"
                        android:paddingRight="15dp" >

                        <ImageButton
                            android:id="@+id/ib_profile_send_sms"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="13dp"
                            android:background="@drawable/smsicon" />

                        <ImageButton
                            android:id="@+id/ib_profile_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="13dp"
                            android:background="@drawable/emailicon" />

                        <ImageButton
                            android:id="@+id/ib_profile_call"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/phoneicon" />
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/rl_profile_hierarchy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/actionbarprofile" >

                        <ImageView
                            android:id="@+id/iv_profile_hierarchy_arrow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/arrowdown" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp"
                            android:text="@string/organization_hierarchy"
                            android:textSize="20sp" />
                    </RelativeLayout>
                </LinearLayout>
            </FrameLayout>

            <ListView
                android:id="@+id/lv_profile_organization_hierarchy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:listSelector="@android:color/transparent" >
            </ListView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>