<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/home_buttom" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:paddingTop="12dp" >

        <TextView
            android:id="@+id/tv_branch_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="right"
            android:layout_weight="2"
            android:textColor="@color/main_name_blue_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/communication_options"
            android:textColor="@color/main_name_blue_color"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="2"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_branch_communication_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:lineSpacingExtra="1dp"
                android:text="dddddd" />

            <TextView
                android:id="@+id/tv_branch_communication_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:lineSpacingExtra="1dp"
                android:text="ffffff"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@color/gray" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:paddingTop="12dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/address"
            android:textColor="@color/main_name_blue_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_branch_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="2"
            android:lineSpacingExtra="1dp"
            android:text="dddddd"
            android:textStyle="bold" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@color/gray" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="10dp" >

        <ImageButton
            android:id="@+id/ib_branch_navigate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/navigateicon" />

        <ImageButton
            android:id="@+id/ib_branch_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/phoneicon" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@color/gray" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:paddingTop="12dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:text="@string/houres_of_service"
            android:textColor="@color/main_name_blue_color"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_branch_houres_of_operation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:lineSpacingExtra="1dp" />

            <TextView
                android:id="@+id/tv_branch_days_of_operation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:lineSpacingExtra="1dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>